warp 458 update (#1258)
* [WARP-SPEED] fix IT testQueriesWithFunctions

* [WARP-SPEED] SIC-2432: revise WarmupRuleService init and the use of locks

* [WARP-SPEED] fix type source

* [WARP-SPEED] moved Coordinator/Worker NodeManager to relevant package

* [WARP-SPEED] split storageCollectorArgs to QueryArgs and CollectArgs

* [WARP-SPEED] create MatchService

* [WARP-SPEED] fix error handling of matchService

* [WARP-SPEED] SIC-2552 hide catalog sequence value when checking is default

* [WARP-SPEED] SIC-2462 delete files when removing catalog

* [WARP-SPEED] Update Warp-Speed dependency version 143

* [WARP-SPEED] lock RG in CM only in merge

* [WARP-SPEED]  SIC-2561 cache levels for metadata and counters

* [WARP-SPEED] Update Warp-Speed dependency version 144

* [WARP-SPEED] SIC-2530 remove warm data of url and category_list_string

[WARP-SPEED] SIC-2530 expected_warm_failures should be 0

* [WARP-SPEED] Update Warp-Speed dependency version 145

* [WARP-SPEED] SIC-2571 Reject too many pending tasks for the same row-group

* [WARP-SPEED] SIC-2526 connector context

* [WARP-SPEED] Update Warp-Speed dependency version 146

* [WARP-SPEED] SIC-2583 trim slices for min max

* [WARP-SPEED] Update Warp-Speed dependency version 148

* [WARP-SPEED] [CacheManager] Use HashFingerprint64 instead of SHA256 to speed up rowGroupKey calculation

* [WARP-SPEED] Warp fix warmup rules fetch & warming flow

* [WARP-SPEED] SIC-2493 shared connector memory allocated by java

* [WARP-SPEED] Update Warp-Speed dependency version 149

* [WARP-SPEED] SIC-2577 use array list for readDictionary

* [WARP-SPEED] Add connector metrics to CM load pages

* [WARP-SPEED] WarmingCandidate to hold single DictionaryWarmInfo

* [WARP-SPEED] clean cache on empty query

* [WARP-SPEED] Update Warp-Speed dependency version 152

* [WARP-SPEED] SIC-2586 alloc/free reader id in java

* [WARP-SPEED] Update Warp-Speed dependency version 153

* [WARP